--- a/estilo/style.css
+++ b/estilo/style.css
@@ -54,9 +54,12 @@ header > h1{
    margin-top: 50px;
 
 }
+
 nav > ul{
     display: flex;
-    justify-content:space-evenly;
+    justify-content:center;
+    width: 100%;
+    text-align: center;
     
    
     
@@ -67,8 +70,8 @@ nav > ul >li {
     text-decoration: none;
     background-color: burlywood;
 
-   margin: auto;
-    width: 90%;
+  
+    width: 90px;
     border-radius: 0px 30px;
     border: 1px solid rgba(0, 0, 0, 0.322);
 }
@@ -136,8 +139,11 @@ section.imagem{
 
 }
 section.imagem >p{
+    line-height: normal;
+    font-size: 1em;
+    margin-top: 200px;
     background-image: linear-gradient(to right ,  rgba(0, 0, 0, 0.500) 30% , transparent  );
-    width: 400px;
+    width:500px;
  display: inline-block;
  padding: 5px;
  text-shadow: 01px ,1px ,1px black;
