--- a/estilo/style.css
+++ b/estilo/style.css
@@ -12,6 +12,7 @@
     font-style: normal;
   }
 
+
 :root{
     --fonte-altenativo: Arial, Helvetica, sans-serif;
     --fonte-texto: 'Borel', cursive;
@@ -78,10 +79,10 @@ ul{
     
 }
 nav > ul >li {
- padding: 6px;
+padding: 6px 0px;
     text-decoration: none;
     background-color: burlywood;
-  gap: 10px;
+  
 
    
 
@@ -93,27 +94,33 @@ nav > ul >li {
 }
 .abalt{
    
-    display: none;
+    display:none;
+    transition: display 1s ease; /* Adiciona uma transição suave de 0.3 segundos */
    gap: 5px;
-   margin: 0px;
+ margin-right: -30px;
 
     align-items: center;
  /* display: none; */
   
 }
 .abalt > li{
-    width: 40px;
+    width:30px;
     padding: 2px;
     text-decoration: none;
     background-color: burlywood;
    
     border-radius:  30px;
     border: 1px solid rgba(0, 0, 0, 0.322);
+  
 }
 .direita{
     border-radius:30px 0px ;
 }
-
+.abalt > li:hover{
+    cursor: pointer;
+    background-color: #F87B1F;
+    color: whitesmoke;
+}
 nav > ul >li:hover{
     cursor: pointer;
     background-color: #F87B1F;
